// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RichResolutionCardRow renders with labelType=check 1`] = `
<DocumentFragment>
  How to check
  <mock-richresolutioncontent
    contentid="content-id"
    contentvariables="[object Object]"
    labeltype="check"
  />
</DocumentFragment>
`;

exports[`RichResolutionCardRow renders with labelType=fix 1`] = `
<DocumentFragment>
  How to fix
  <mock-richresolutioncontent
    contentid="content-id"
    contentvariables="[object Object]"
    labeltype="fix"
  />
</DocumentFragment>
`;
